--- a/8/lesson8/Elastico/style/style2.css
+++ b/8/lesson8/Elastico/style/style2.css
@@ -27,12 +27,18 @@
 
 
 /*Шапка*/
-
+.header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  background-image: url(../img/im0.jpg);
+}
 header {
   position: relative;
   height: 85px;
-  width: 100%;
-  background-image: url(../img/im0.jpg);
+  /*width: 100%;*/
+ 
 }
 
 header img {
@@ -47,6 +53,85 @@ header p {
   color: orange;
   font-size: 40px;
 }
+.basket {
+  margin: 23px 100px 12px 0;
+  position: relative;
+}
+.cart-block{
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+  border-radius: 5px;
+  box-sizing: border-box;
+  right: 0;
+  top: 80%;
+  position: absolute;
+  background-color: white;
+  padding: 20px;
+  color: black;
+  width: 300px;
+  z-index: 10;
+}
+
+.invisible{
+  display: none;
+}
+.cart-block:before{
+  content: '';
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: -10px;
+  right: 35px;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid white;
+}
+
+.buy-btn, .del-btn{
+  margin-top: 5px;
+  background-color: #2f2a2d;
+  padding: 5px 15px;
+  border: 1px solid transparent;
+  color: #fafafa;
+  border-radius: 5px;
+  transition: all ease-in-out .4s;
+  cursor: pointer;
+}
+.buy-btn:hover, .del-btn:hover{
+  background-color: #fafafa;
+  color: #2f2a2d;
+  border: 1px solid #2f2a2d;
+}
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+}
+.cart-item:not(:last-child){
+  margin-bottom: 20px;
+}
+.product-bio{
+  display: flex;
+}
+.cart-item img{
+  align-self: flex-start;
+  margin-right: 15px;
+}
+.product-single-price{
+  color: #474747;
+  font-size: 0.5em;
+}
+.product-price{
+  margin-left: 30px;
+}
+.product-desc{
+  max-width: 150px;
+}
+.product-quantity {
+  margin-top: 15px;
+  font-size: 0.75em;
+}
+.right-block{
+  text-align: right;
+}
 
 .social {
   float: right;
@@ -58,7 +143,7 @@ header p {
 
 /*меню*/
 
-aside {
+.menu {
   clear: both;
   position: relative;
   width: 100%;
@@ -68,11 +153,11 @@ aside {
   z-index: 1;
 }
 
-aside>ul {
+.menu>ul {
   list-style-type: none;
 }
 
-aside>ul>li {
+.menu>ul>li {
   width: 10%;
   height: 35px;
   font: 14px "Prosto one";
@@ -89,7 +174,7 @@ a:hover {
   color: orange;
 }
 
-aside li {
+.menu li {
   padding: 0;
   /*display: none;*/
   list-style-type: none;
@@ -97,14 +182,14 @@ aside li {
   text-align: left;
 }
 
-aside>ul>li:hover ul {
+.menu>ul>li:hover ul {
   display: block;
   background-color: lightblue;
   font-size: 10px;
   padding: 20px 0 20px 20px;
 }
 
-aside>ul>li>ul>li {
+.menu>ul>li>ul>li {
   margin-bottom: 5px;
   font-size: 20px;
 }
